[project]
name = "money-printer-turbo"
version = "0.1.0"
description = "A powerful multimedia processing and AI application"
requires-python = ">=3.12, <3.13"
dependencies = [
    "moviepy>=2.1.1",
    "streamlit>=1.40.2",
    "edge-tts>=6.1.19",
    "fastapi>=0.115.6",
    "uvicorn>=0.32.1",
    "openai>=1.56.1",
    "faster-whisper>=1.1.0",
    "loguru>=0.7.2",
    "google-generativeai>=0.8.3",
    "dashscope>=1.20.14",
    "g4f>=0.3.8.1",
    "azure-cognitiveservices-speech>=1.41.1",
    "redis>=5.2.0",
    "python-multipart>=0.0.19",
    "streamlit-authenticator>=0.4.1",
    "pyyaml",
    "nvidia-cublas-cu12>=12.4.5.8",
    "torch>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
nvidia-cublas-cu12 = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
nvidia-cudnn-cu12 = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
